# crunch-cli

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.claude/commands/: crunch-analysis.md
src/crunch/: __init__.py  __main__.py  io.py
src/crunch/commands/: filter.py  lm.py  load.py  melt.py  pivot.py  plot.py  regression.py  sort.py  transform.py  write.py
tests/: conftest.py  test_filter.py  test_integration.py  test_io.py  test_lm.py  test_load.py  test_melt.py  test_pivot.py  test_plot.py  test_properties.py  test_regression.py  test_sort.py  test_transform.py  test_write.py
